# airis-mcp-gateway

./: .env.debian.example  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  PERFORMANCE_TEST.md  README.ja.md  README.md  ROADMAP.md  SECRETS.md  TASK_LIST.md  VISION.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  figma-catalog.yaml  install.sh  mcp-config.json  mcp-gateway-wrapper.sh  mcp.json  mcp.json.client-example  package.json  test-repository-scope.sh  test_mcp_tools.py  test_token_reduction.py
.serena/: project.yml
Formula/: airis-mcp-gateway.rb
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_secrets_table.py  003_seed_mcp_servers.py  004_add_mcp_server_states.py
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/api/endpoints/: __init__.py  gateway.py  mcp_config.py  mcp_proxy.py  mcp_server_states.py  mcp_servers.py  secrets.py  validate_server.py
apps/api/app/core/: config.py  database.py  encryption.py  protocol_logger.py  schema_partitioning.py  validators.py
apps/api/app/crud/: __init__.py  mcp_server.py  mcp_server_state.py  secret.py
apps/api/app/models/: __init__.py  mcp_server.py  mcp_server_state.py  secret.py
apps/api/app/schemas/: __init__.py  mcp_server.py  mcp_server_state.py  secret.py
apps/api/tests/integration/: test_mcp_server_persistence.py
claudedocs/: DEBIAN_DEPLOYMENT_GUIDE.md  DEBIAN_DEPLOYMENT_SUMMARY.md  MIGRATION_CHECKLIST.md  QUICK_START_DEBIAN.md  fix_summary.md  mcp_token_optimization_research.md
desktop-extension/: build.sh  manifest.json
docs/: mcp-best-practices.md  research_mcp_installation_20251014.md  testing_implementation_summary.md
gateway/: Dockerfile  inject-secrets.sh
profiles/: README.md  minimal.json  recommended.json
scripts/: import_existing_configs.py  setup-debian.sh  (+1 more)
(+141 files in other folders)
